<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity2_Nivel_1">

    <ImageView
        android:id="@+id/img1_Player"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="81dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fresa" />

    <EditText
        android:id="@+id/txt1_Nombre"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/txt1_nombre"
        android:inputType="text"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1_Player" />

    <Button
        android:id="@+id/bt1_Play"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/fondoboton"
        android:hint="@string/btn_play"
        android:onClick="play"
        android:text="Jugar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1_Nombre" />

    <TextView
        android:id="@+id/txt1_Score"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/fondoet"
        android:text="@string/txt1_score"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt1_Play"
        app:layout_constraintVertical_bias="0.175" />
</androidx.constraintlayout.widget.ConstraintLayout>